--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>DomainName.Plus</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="assets/style.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
   <body>
