--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>DomainName.Plus</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="assets/style.css" />
+    <!-- style css  -->
+     <!-- <link rel="stylesheet" href="assets/style.css" />  -->
+        <!-- tailwindcss  -->
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
@@ -15,10 +17,8 @@
 
 <!-- Cloudflare Pages Analytics --></html>
 
-
-<main
-  class="bg-indigo-500 flex h-screen items-center justify-center w-full"
->
+    <!-- style css  -->
+<main class="bg-indigo-500 flex h-screen items-center justify-center w-full">
   <h1 class="text-white text-4xl font-semibold">DomainName.Plus</h1>
 
 </main>
