--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
 <!-- Cloudflare Pages Analytics --></html>
 
     <!-- style css  -->
-<main class="bg-indigo-500 flex h-screen items-center justify-center w-full">
+<main> 
+  <div class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500">
+ <!-- <main class="bg-indigo-500 flex h-screen items-center justify-center w-full">  -->
+  
+  <!-- <div class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500"></div>  -->
+  <!-- <div class="h-14 bg-gradient-to-r from-sky-500 to-indigo-500"></div>  -->
+  <!-- <div class="h-14 bg-gradient-to-r from-violet-500 to-fuchsia-500"></div>  -->
+  <!-- <div class="h-14 bg-gradient-to-r from-purple-500 to-pink-500"></div>  -->
+  
   <h1 class="text-white text-4xl font-semibold">DomainName.Plus</h1>
-
+</div> 
 </main>
 
 </body>
