--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <!-- Cloudflare Pages Analytics --></html>
 
     <!-- style css  -->
-<main> 
-  <div class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500">
+
+<main class="bg-gradient-500 flex h-screen items-center justify-center w-full">
  <!-- <main class="bg-indigo-500 flex h-screen items-center justify-center w-full">  -->
   
   <!-- <div class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500"></div>  -->
@@ -28,7 +28,7 @@
   <!-- <div class="h-14 bg-gradient-to-r from-purple-500 to-pink-500"></div>  -->
   
   <h1 class="text-white text-4xl font-semibold">DomainName.Plus</h1>
-</div> 
+
 </main>
 
 </body>
