--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- style css  -->
 
-<main class="bg-indigo-500 flex h-screen items-center justify-center w-full">
+<main class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500">
  <!-- <main class="bg-indigo-500 flex h-screen items-center justify-center w-full">  -->
   
   <!-- <div class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500"></div>  -->
@@ -28,7 +28,8 @@
   <!-- <div class="h-14 bg-gradient-to-r from-purple-500 to-pink-500"></div>  -->
   
   <h1 class="text-white text-4xl font-semibold">DomainName.Plus</h1>
-
+     <!-- Hello#DomainName.Plus  -->
+  <button type="button" class="bg-gradient-to-r from-teal-400 to-blue-500 hover:from-pink-500 hover:to-orange-500">Hello#DomainName.Plus</button>
 </main>
 
 </body>
