--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- style css  -->
 
-<main class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500">
+<main class="bg-gradient-to-r flex h-screen items-center justify-center w-full from-indigo-500 via-purple-500 to-pink-500">
  <!-- <main class="bg-indigo-500 flex h-screen items-center justify-center w-full">  -->
   
   <!-- <div class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500"></div>  -->
