--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
   <h1 class="text-white text-4xl font-semibold">DomainName.Plus</h1>
  <br />
      <!-- Hello#DomainName.Plus  -->
+<td class="break-all min-w-[120px]">
+  verylongemailaddress@companydomain.com
+</td>
   <button type="button" class="bg-gradient-to-r from-teal-400 to-blue-500 hover:from-pink-500 hover:to-orange-500">Hello#DomainName.Plus</button>
+ <p class="whitespace-normal xs:whitespace-nowrap">
+  手机号：138-1234-5678<br>
+  地址：北京市海淀区
+</p>
 </main>
 
 </body>
