--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 <!-- Cloudflare Pages Analytics --></html>
 
     <!-- style css  -->
-
-<main class="bg-gradient-to-r flex h-screen items-center justify-center w-full from-indigo-500 via-purple-500 to-pink-500">
+<main class="bg-gradient-to-r flex h-screen items-center justify-center w-full via-purple-500 to-pink-500">
  <!-- <main class="bg-indigo-500 flex h-screen items-center justify-center w-full">  -->
   
   <!-- <div class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500"></div>  -->
@@ -28,16 +27,11 @@
   <!-- <div class="h-14 bg-gradient-to-r from-purple-500 to-pink-500"></div>  -->
   
   <h1 class="text-white text-4xl font-semibold">DomainName.Plus</h1>
- <br />
+ 
      <!-- Hello#DomainName.Plus  -->
-<td class="break-all min-w-[120px]">
-  verylongemailaddress@companydomain.com
-</td>
+<div>
   <button type="button" class="bg-gradient-to-r from-teal-400 to-blue-500 hover:from-pink-500 hover:to-orange-500">Hello#DomainName.Plus</button>
- <p class="whitespace-normal xs:whitespace-nowrap">
-  手机号：138-1234-5678<br>
-  地址：北京市海淀区
-</p>
+</div>
 </main>
 
 </body>
