--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- Cloudflare Pages Analytics --></html>
 
     <!-- style css  -->
-<main class="bg-gradient-to-r from-violet-500 to-fuchsia-50 flex h-screen items-center justify-center w-full">
+<main class="bg-gradient-to-r from-cyan-500 to-blue-500">
  <!-- <main class="bg-indigo-500 flex h-screen items-center justify-center w-full">  -->
   
   <!-- <div class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500"></div>  -->
