--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
   <!-- <div class="h-14 bg-gradient-to-r from-purple-500 to-pink-500"></div>  -->
   
   <h1 class="text-white text-4xl font-semibold">DomainName.Plus</h1>
-  <h1 class="h-14 bg-gradient-to-r from-purple-500 to-pink-500">Hello#DomainName.Plus</h1>
+  <h3 class="text-white text-4xl font-semibold">DomainName.Plus</h3>
      <!-- Hello#DomainName.Plus  -->
-<div>
+
   <button type="button" class="bg-gradient-to-r from-teal-400 to-blue-500 hover:from-pink-500 hover:to-orange-500">Hello#DomainName.Plus</button>
-</div>
+
 </main>
 
 </body>
