--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- <div class="h-14 bg-gradient-to-r from-purple-500 to-pink-500"></div>  -->
   
   <h1 class="text-white text-4xl font-semibold">DomainName.Plus</h1>
-  <h3 class="text-white text-4xl font-semibold">DomainName.Plus</h3>
+  <p class="text-white text-6xl font-semibold">DomainName.Plus</p>
      <!-- Hello#DomainName.Plus  -->
 
   <button type="button" class="bg-gradient-to-r from-teal-400 to-blue-500 hover:from-pink-500 hover:to-orange-500">Hello#DomainName.Plus</button>
