--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
   <!-- <div class="h-14 bg-gradient-to-r from-sky-500 to-indigo-500"></div>  -->
   <!-- <div class="h-14 bg-gradient-to-r from-violet-500 to-fuchsia-500"></div>  -->
   <!-- <div class="h-14 bg-gradient-to-r from-purple-500 to-pink-500"></div>  -->
-  
-  <h1 class="text-white text-4xl font-semibold">DomainName.Plus</h1>
+    <!-- text -->
+  <p class="break-normal md:break-all">text-white text-4xl font-semibold break-normal md:break-all</p>
+  <h1 class="text-white text-4xl font-semibold break-normal md:break-all">DomainName.Plus</h1>
   <p class="text-white text-6xl font-semibold">DomainName.Plus</p>
      <!-- Hello#DomainName.Plus  -->
 
