--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
   <!-- <div class="h-14 bg-gradient-to-r from-violet-500 to-fuchsia-500"></div>  -->
   <!-- <div class="h-14 bg-gradient-to-r from-purple-500 to-pink-500"></div>  -->
     <!-- text -->
-  <p class="break-normal md:break-all">text-white text-4xl font-semibold break-normal md:break-all</p>
+
   <h1 class="text-white text-4xl font-semibold break-normal md:break-all">DomainName.Plus</h1>
-  <p class="text-white text-6xl font-semibold">DomainName.Plus</p>
+   <div class="relative flex py-5 items-center">
+    <div class="flex-grow border-t border-gray-400">DomainsName.Plus</div>
+    <span class="flex-shrink mx-4 text-gray-400">Content</span>
+    <div class="flex-grow border-t border-gray-400">DomainNames.Plus</div>
+</div>
      <!-- Hello#DomainName.Plus  -->
 
   <button type="button" class="bg-gradient-to-r from-teal-400 to-blue-500 hover:from-pink-500 hover:to-orange-500">Hello#DomainName.Plus</button>
