--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
 
   <h1 class="text-white text-4xl font-semibold break-normal md:break-all">DomainName.Plus</h1>
    <div class="relative flex py-5 items-center">
-    <div class="flex-grow border-t border-gray-400">DomainsName.Plus</div>
     <span class="flex-shrink mx-4 text-gray-400">Content</span>
-    <div class="flex-grow border-t border-gray-400">DomainNames.Plus</div>
 </div>
-     <!-- Hello#DomainName.Plus  -->
 
+  <article class="text-wrap">
+  <h3>Beloved Manhattan soup stand closes</h3>
+  <p>New Yorkers are facing the winter chill...</p>
+</article>
+  
+     <!-- Hello#DomainName.Plus  -->
   <button type="button" class="bg-gradient-to-r from-teal-400 to-blue-500 hover:from-pink-500 hover:to-orange-500">Hello#DomainName.Plus</button>
 
 </main>
