--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <!-- text -->
 
   <h1 class="text-white text-4xl font-semibold break-normal md:break-all">DomainName.Plus</h1>
-   <div class="relative flex py-5 items-center">
+   <p> class="relative flex py-5 items-center">
     <span class="flex-shrink mx-4 text-gray-400">Content</span>
-</div>
+</p>
 
   <article class="text-wrap">
   <h3>Beloved Manhattan soup stand closes</h3>
