--- a/index.html
+++ b/index.html
@@ -28,14 +28,11 @@
     <!-- text -->
 
   <h1 class="text-white text-4xl font-semibold break-normal md:break-all">DomainName.Plus</h1>
-   <p class="relative flex py-5 items-center">
-    <span class="flex-shrink mx-4 text-gray-400">Content</span>
-</p>
 
-  <article class="text-wrap">
+  <div article class="text-wrap">
   <h3>Beloved Manhattan soup stand closes</h3>
   <p>New Yorkers are facing the winter chill...</p>
-</article>
+</div>
   
      <!-- Hello#DomainName.Plus  -->
   <button type="button" class="bg-gradient-to-r from-teal-400 to-blue-500 hover:from-pink-500 hover:to-orange-500">Hello#DomainName.Plus</button>
