--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
   <!-- <div class="h-14 bg-gradient-to-r from-purple-500 to-pink-500"></div>  -->
     <!-- text -->
 
-  <h1 class="text-white text-4xl font-semibold break-normal md:break-all">DomainName.Plus</h1>
+  <h1 class="text-white text-4xl font-semibold break-normal md:break-all text-wrap">DomainName.Plus</h1>
 
-  <div article class="text-wrap">
   <h3>Beloved Manhattan soup stand closes</h3>
   <p>New Yorkers are facing the winter chill...</p>
-</div>
   
      <!-- Hello#DomainName.Plus  -->
   <button type="button" class="bg-gradient-to-r from-teal-400 to-blue-500 hover:from-pink-500 hover:to-orange-500">Hello#DomainName.Plus</button>
