--- a/index.html
+++ b/index.html
@@ -21,21 +21,18 @@
 <main class="bg-gradient-to-r from-cyan-500 to-blue-500  flex h-screen items-center justify-center w-full">
  <!-- <main class="bg-indigo-500 flex h-screen items-center justify-center w-full">  -->
   
-  <!-- <div class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500"></div>  -->
-  <!-- <div class="h-14 bg-gradient-to-r from-sky-500 to-indigo-500"></div>  -->
-  <!-- <div class="h-14 bg-gradient-to-r from-violet-500 to-fuchsia-500"></div>  -->
-  <!-- <div class="h-14 bg-gradient-to-r from-purple-500 to-pink-500"></div>  -->
+  <!-- <div class="bg-gradient-to-r from-cyan-500 to-blue-500"></div>  -->
+  <!-- <div class="bg-gradient-to-r from-sky-500 to-indigo-500"></div>  -->
+  <!-- <div class="bg-gradient-to-r from-violet-500 to-fuchsia-500"></div>  -->
+  <!-- <div class="bg-gradient-to-r from-purple-500 to-pink-500"></div>  -->
     <!-- text -->
-
   <h1 class="text-white text-4xl font-semibold break-normal md:break-all text-wrap">DomainName.Plus</h1>
 
-  <h3>Beloved Manhattan soup stand closes</h3>
-  <p>New Yorkers are facing the winter chill...</p>
-  
      <!-- Hello#DomainName.Plus  -->
   <button type="button" class="bg-gradient-to-r from-teal-400 to-blue-500 hover:from-pink-500 hover:to-orange-500">Hello#DomainName.Plus</button>
 
 </main>
-
+     <!-- Hello#DomainName.Plus  -->
+  <button type="button" class="bg-gradient-to-r from-teal-400 to-blue-500 hover:from-pink-500 hover:to-orange-500">Hello#DomainName.Plus</button>
 </body>
 </html>
