--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   <!-- <div class="bg-gradient-to-r from-violet-500 to-fuchsia-500"></div>  -->
   <!-- <div class="bg-gradient-to-r from-purple-500 to-pink-500"></div>  -->
     <!-- text -->
+  <article>
   <h1 class="text-white text-4xl font-semibold break-normal md:break-all text-wrap">DomainName.Plus</h1>
 
      <!-- Hello#DomainName.Plus  -->
   <button type="button" class="bg-gradient-to-r from-teal-400 to-blue-500 hover:from-pink-500 hover:to-orange-500">Hello#DomainName.Plus</button>
-
+</article>
 </main>
-     <!-- Hello#DomainName.Plus  -->
-  <button type="button" class="bg-gradient-to-r from-teal-400 to-blue-500 hover:from-pink-500 hover:to-orange-500">Hello#DomainName.Plus</button>
+
 </body>
 </html>
