--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- Cloudflare Pages Analytics --></html>
 
     <!-- style css  -->
-<main class="bg-gradient-to-r from-cyan-500 to-blue-500  flex h-screen items-center justify-center w-full">
+<main class="bg-gradient-to-r from-sky-500 to-indigo-500  flex h-screen items-center justify-center w-full">
  <!-- <main class="bg-indigo-500 flex h-screen items-center justify-center w-full">  -->
   
   <!-- <div class="bg-gradient-to-r from-cyan-500 to-blue-500"></div>  -->
@@ -29,10 +29,8 @@
   <article>
   <h1 class="text-white text-4xl font-semibold break-normal md:break-all text-wrap">DomainName.Plus</h1>
 <br>
-<br>
-<br>
      <!-- Hello#DomainName.Plus  -->
-  <button type="button" class="bg-gradient-to-r from-teal-400 to-blue-500 hover:from-pink-500 hover:to-orange-500">Hello#DomainName.Plus</button>
+  <button type="button" class="bg-gradient-to-r from-teal-500 to-blue-500 hover:from-pink-500 hover:to-orange-500">Hello#DomainName.Plus</button>
 </article>
 </main>
 
