--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <h1 class="text-white text-4xl font-semibold break-normal md:break-all text-wrap">DomainName.Plus</h1>
 <br>
      <!-- Hello#DomainName.Plus  -->
-  <button type="button" class="text-​​6xl bg-gradient-to-r from-teal-500 to-blue-500 hover:from-pink-500 hover:to-orange-500">Hello#DomainName.Plus</button>
+  <button type="button" class="bg-gradient-to-r from-teal-500 to-blue-500 hover:from-pink-500 hover:to-orange-500">Hello#DomainName.Plus</button>
 </article>
 </main>
 
